// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package taskdefs;

option go_package = "github.com/tetrafolium/luci-go/buildbucket/appengine/tasks/defs;taskdefs";

// A task to cancel a Swarming task.
message CancelSwarmingTask {
  // Hostname (e.g. "chromium-swarm.appspot.com") where the task should be
  // cancelled.
  string hostname = 1;
  // Swarming task ID to cancel.
  string task_id = 2;
  // LUCI realm the task belongs to or "" if realms is disabled.
  string realm = 3;
}

// A task to send a build notification on Pub/Sub.
message NotifyPubSub {
  // ID of a build in the datastore. See model.Build.
  int64 build_id = 1;
  // Whether to use the global or build-specific callback Pub/Sub topic.
  bool callback = 2;
}
